// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Matches snapshot for H1 1`] = `
<span
  className="text-vital-primary-brand text-5xl font-normal"
/>
`;

exports[`Typography Matches snapshot for H2 1`] = `
<span
  className="text-vital-primary-body-copy text-3xl font-extrabold"
/>
`;
